<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10"
        android:padding="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:background="@color/colorCoorpDarkGray"
            android:layout_marginRight="10dp"
            android:weightSum="10">

            <LinearLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical"
                android:background="@color/colorCoorpDarkGray"
                android:padding="5dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/description"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/controls_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:orientation="vertical"
                android:background="@color/colorCoorpGray"
                android:padding="5dp"
                android:focusableInTouchMode="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/blinking_period"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="10dip" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/blink_text"
                    android:background="@color/colorWhite"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="5dip"
                    android:numeric="integer"
                    android:text="@string/default_blink_value"
                    android:textAlignment="textEnd"
                    android:paddingEnd="10dip"
                    android:textColor="@android:color/black"
                    android:enabled="true"
                    android:editable="false"
                    android:textSize="18sp"
                    android:paddingStart="10dip" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/period_description"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="5dip"
                    android:id="@+id/textView"
                    android:layout_gravity="right"
                    android:textSize="10sp"
                    android:textColor="@color/colorCoorpDarkGray"
                    android:gravity="right" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_blink"
                    android:id="@+id/blink_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@color/colorCoorpGreen"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical"
            android:background="@color/colorCoorpDarkGray">

            <ImageView
                android:id="@+id/board_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/sbc_board"
                tools:ignore="ContentDescription" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
